[package]
name = "evm-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
hex = "0.4.3"
dotenv = "0.15.0"
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
futures = "0.3.5"
async-trait = "0.1.64"
anyhow = "1.0.70"
serde = "1.0.145"
serde_json = "1.0"
itertools = "0.11.0"
thiserror = "1.0.50"

cfmms = "*"
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots" }
ethers = { version = "2.0", features = ["abigen", "ws"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-contract = "2.0"
eth-encode-packed = "0.1.0"

# foundry
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "3e962e2efe17396886fcb1fd141ccf4204cd3a21" }
anvil = { git = "https://github.com/foundry-rs/foundry", rev = "3e962e2efe17396886fcb1fd141ccf4204cd3a21" }
foundry-utils = { git = "https://github.com/foundry-rs/foundry", rev = "3e962e2efe17396886fcb1fd141ccf4204cd3a21" }

# alloy
alloy-primitives = "0.4.2"

colored = "2.0.0"
log = "0.4.17"
indicatif = "0.17.5"
indoc = "2"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.23"
csv = "1.2.2"
ruint = "1.11.0"
bitflags = "2.4.1"

[patch.crates-io]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "b4c366c964106b274e2eb528ac44eebc9bb49551" }
ethers-addressbook = { git = "https://github.com/gakonst/ethers-rs", rev = "b4c366c964106b274e2eb528ac44eebc9bb49551" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev = "b4c366c964106b274e2eb528ac44eebc9bb49551" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", rev = "b4c366c964106b274e2eb528ac44eebc9bb49551" }
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs", rev = "b4c366c964106b274e2eb528ac44eebc9bb49551" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev = "b4c366c964106b274e2eb528ac44eebc9bb49551" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", rev = "b4c366c964106b274e2eb528ac44eebc9bb49551" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", rev = "b4c366c964106b274e2eb528ac44eebc9bb49551" }
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", rev = "b4c366c964106b274e2eb528ac44eebc9bb49551" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "b4c366c964106b274e2eb528ac44eebc9bb49551" }

alloy-dyn-abi = { git = "https://github.com/alloy-rs/core/" }
alloy-primitives = { git = "https://github.com/alloy-rs/core/" }
alloy-json-abi = { git = "https://github.com/alloy-rs/core/" }
alloy-sol-types = { git = "https://github.com/alloy-rs/core/" }

revm = { git = "https://github.com/bluealloy/revm", rev = "1609e07c68048909ad1682c98cf2b9baa76310b5" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "1609e07c68048909ad1682c98cf2b9baa76310b5" }
